More views and fix bugs

--- a/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet.csproj
+++ b/01. Source/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet/Blockchain_MyEtherWallet.csproj
@@ -165,9 +165,12 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Transfer.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\History.cshtml" />
+    <Content Include="Views\Home\NewWallet.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
